hacky trick to fix nav bar z-index  on firefox

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,4 +40,9 @@ $large-screen: "(min-width : 768px)";
   cursor: default;
 }
 
+// quick hack for fixing sidebar nav z-index on firefox
+* {
+  position: relative;
+}
+
 @import "*";
